# WatermarkRemoval

./: .gitignore  README.md  __init__.py  dataset.py  find_watermarks.py  nodes.py  pyproject.toml  requirements.txt  train.py
checkpoints/: brightness_predictor.pth
models/: brightness_predictor.py  watermark_detector.py
