[project]
name = "watermark-removal"
description = "Remove Watermarks"
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/l-comm/WatermarkRemoval"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "l-comm"
DisplayName = "Watermark-Removal"
Icon = ""
